--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -8,7 +8,13 @@
   }
 
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, 0.3);
+    transition: all 0.4s ease-out;
+
+    &--dark {
+      background-color: rgba(23, 51, 72, 0.85);
+    }
   }
   width: 100%;
   &__button-container {
@@ -27,6 +33,11 @@
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
+      transition: all 0.4s ease-out;
+
+      .site-header--dark & {
+        transform: scale(0.57);
+      }
     }
   }
   &__logo__graphic {
