--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -8,6 +8,9 @@
   &--medium {
     max-width: 976px;
   }
+  &--narrow {
+    max-width: 470px;
+  }
   &--no-padding-until-medium {
     padding-right: 0;
     padding-left: 0;
